# spring-samples

./: .gitattributes  .gitignore  README.md
_yml-sample/: application-console.yml  application-database.yml  application-dev.yml  application.yml  application2.yml
arduino-automation/: .gitignore  LICENSE  README.md  mise.toml
async-pdf/: pom.xml
awstest/: pom.xml
basic-api-provider/: .env.sample  docker-compose.yml  (+1 more)
occupational-medicine/backend-api/: .env.sample  Cargo.toml
occupational-medicine/backend-api/src/: consts.rs  lib.rs  main.rs
occupational-medicine/backend-api/src/controller/: database.rs  mod.rs  options.rs  routes.rs
occupational-medicine/backend-api/src/errorhandler/: app_error.rs
occupational-medicine/backend-api/src/service/: create.rs  dashboard.rs  get.rs  logic.rs  mod.rs  tooling.rs
occupational-medicine/backend-api/src/structs/: empresa.rs  exame.rs  funcionario_cliente.rs  funcionario_clinica.rs  mod.rs  risco_ocupacional.rs  risco_ocupacional_exame.rs  tipo_exame.rs
occupational-medicine/backend-api/src/structs/dashboard/: equipe_clinica.rs  exames_medicos.rs  mod.rs  painel.rs  painel_empresas.rs  painel_funcionario.rs  riscos_ocupacionais.rs  upcoming_exams.rs
occupational-medicine/backend-api/src/structs/logic/: aso_trend_report.rs  exams_by_month_report.rs  fitness_trend.rs  mod.rs  quantity_funcionario.rs  report_filter.rs  risco_categoria_report.rs
occupational-medicine/backend-api/src/structs/response/: empresa_response.rs  mod.rs
occupational-medicine/backend-api/src/structs/tooling/: mod.rs  resumo_aso.rs
(+2207 files in other folders)
