[package]
name = "saude_ocupacional_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
once_cell = "1.19"
tokio-stream = "0.1"
anyhow = "1.0"
dotenvy = "0.15"
futures-core = "0.3"
axum-core = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
csv = "1.3"
